fix some alignment, add active to header buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,9 +13,15 @@
   --table_row_alt: var(--grey);
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
+  margin: 0;
+  padding: 0;
 }
 
 nav {
@@ -83,6 +89,8 @@ li {
 
 .main_container {
   overflow-x: auto;
+  padding: 0;
+  margin: 0;
 }
 
 table {
@@ -96,6 +104,7 @@ th, td {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  user-select: none;
 }
 
 th {
@@ -110,4 +119,8 @@ tr:nth-child(even) {
 
 .add {
   display: none;
+}
+
+.header_button.active {
+  background-color: var(--active);
 }
